--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbx-ycZawjY0m1A65JfvcsCdXvFaJkM8TXlLUL02goaoxR63zX5bExdBt9yUIf6khm4Y/exec";
+    const AS_URL_BASE = "https://script.google.com/a/~/macros/s/AKfycbx-ycZawjY0m1A65JfvcsCdXvFaJkM8TXlLUL02goaoxR63zX5bExdBt9yUIf6khm4Y/exec";
     
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);
